--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.14.5"
+    "@astrojs/mdx": "^3.1.4",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/inter": "^5.0.20",
+    "@fontsource-variable/jetbrains-mono": "^5.0.22",
+    "@fontsource/jetbrains-mono": "^5.0.21",
+    "@tailwindcss/typography": "^0.5.14",
+    "astro": "^4.14.5",
+    "tailwindcss": "^3.4.10"
   }
 }
